Ai tables update creation